data/collection/fixes/descriptions/java/JDK-8016081
The following test fails with compile-time error (jdk8 b92):

----------------
interface fint { int get(); }

@interface atype { 
  fint fld = ()->(fld==null?0:1); 
}

@atype class T {}
----------------

Output:
t.java:8: error: annotation atype is missing value for the attribute lambda$0
@atype class T {}
^
1 error


Failing JCK tests:

lang/INTF/intf018/intf01802m11/intf01802m11.html
lang/INTF/intf018/intf01803m11/intf01803m11.html
